--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,9 @@
 // Colors
-
+$dark-grey: #333;
+$buttonbg: blue; 
+$darkblue: #364051;
+// font-sizes
+$large: 1.6em;
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
